--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding:0;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 nav {
     height: 80px;
-    background: #fdcc04;
+    background: #abcdef;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem calc((110vw - 1300px) / 2);
+    padding: 0rem calc((100vw - 1300px) 2);
 }
 
 .logo {
@@ -19,7 +19,7 @@ nav {
     font-size: 1.5rem;
     font-weight: bold;
     font-style: italic;
-    padding: 0 2rem;
+    padding: 2rem;
 }
 
 nav a {
@@ -28,15 +28,15 @@ nav a {
     padding: 0 1.5rem;
 }
 
-.hero {
-    background: #fdcc04;
+.main {
+    background: #ffffff;
 }
 
-.hero-container {
+.main-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 95vh;
-    padding:3rem calc((100vw - 1300px) / 2);
+    padding: 3rem calc((100vw - 1300px) / 2);
 }
 
 .column-left {
@@ -55,39 +55,27 @@ nav a {
 
 .column-left p {
     margin-bottom: 2rem;
-    font-size: 1.5rem;
-    line-break: 1.5;
+    font-size: 1.3rem;
+    line-height: 1.5;
 }
 
 button {
     padding: 1rem 3rem;
     font-size: 1rem;
     border: none;
-    color: #fdcc04;
-    background: #000;
+    color: #ffffff;
+    background: #abcdef;
     cursor: pointer;
-    border-radius: 50px;
+    border-radius: 15px;
 }
 
 button:hover {
-    background: #fff;
-    color: #000;
-}
-
-.column-right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0rem 2rem;
-}
-
-.hero-image {
-    width: 100%;
-    height: 100%;
+    background: #aaaaaa;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
-    .hero-container {
+    .main-container {
         grid-template-columns: 1fr;
     }
 }
